<resources>
    <string name="app_name">Make Coffee</string>

    <string name="make_coffee">Make Coffee</string>
    <string name="makecoffee">MakeCoffee</string>
    <string name="coffee_knowledge">Coffee Knowledge</string>
    <string name="knowledge">Knowledge</string>
    <string name="news">News</string>
    <string name="articles">Articles</string>
    <string name="liked">Liked</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="following">Following</string>

    <string name="completed">Completed!</string>
    <string name="previous_step">Previous step</string>
    <string name="next_step">Next step</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="continue_text">Continue</string>
    <string name="google_login">Login with Google</string>
    <string name="google_login_failed">Google Login Failed</string>
    <string name="logout">Log Out</string>

    <string name="write_article_title">Title: </string>
    <string name="write_article_description">Description: </string>
    <string name="write_article_title_hint">Enter title…</string>
    <string name="write_article_description_hint">Enter description…</string>
    <string name="write_article_preview_photo">Preview Photo: </string>
    <string name="write_article_upload_photo">Upload Photo</string>
    <string name="write_article_content">Content: </string>
    <string name="write_article_content_hint">Enter content…</string>
    <string name="write_article_step_upload_photo">Upload Photo(optional): </string>
    <string name="post_article">Post Article</string>
    <string name="history_articles">History Articles</string>

    <string name="title_cannot_be_empty">Title cannot be empty!</string>
    <string name="description_cannot_be_empty">Description cannot be empty!</string>
    <string name="content_cannot_be_empty">Content cannot be empty!</string>
    <string name="photo_cannot_be_empty">Photo cannot be empty!</string>
    <string name="step_content_cannot_be_empty">Step Content cannot be empty!</string>
    <string name="uploading_article_please_wait">Uploading article, please wait a second.</string>
    <string name="uploading_article_successful">Uploading article successful!</string>

    <string name="article_coffee_bean_detail">咖啡詳細記錄</string>
    <string name="article_coffee_bean">咖啡豆: </string>
    <string name="article_coffee_bean_weight">豆克數(g): </string>
    <string name="article_coffee_bean_roast_level">烘焙度: </string>
    <string name="article_coffee_bean_grind">研磨度: </string>
    <string name="article_coffee_water_temp">水溫(°C): </string>
    <string name="article_coffee_water_volume">水量(g): </string>
    <string name="article_coffee_tool">沖泡工具: </string>
    <string name="article_coffee_time">沖泡時間: </string>
    <string name="article_coffee_volume">咖啡液(g): </string>
    <string name="article_coffee_additive">咖啡添加物: </string>

    <string name="article_coffee_flavor">咖啡風味</string>
    <string name="article_coffee_flavor_body">醇度:</string>
    <string name="article_coffee_flavor_acidity">酸味:</string>
    <string name="article_coffee_flavor_bitter">苦味:</string>
    <string name="article_coffee_flavor_sweet">甘味:</string>
    <string name="article_coffee_flavor_aroma">香氣:</string>
    <string name="article_supplement">補充:</string>
    <string name="article_supplement_hint">補充內容…</string>

    <string name="flavor_body">醇度</string>
    <string name="flavor_acidity">酸味</string>
    <string name="flavor_bitter">苦味</string>
    <string name="flavor_sweet">甘味</string>
    <string name="flavor_aroma">香氣</string>

    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="click_to_edit">點擊編輯</string>
    <string name="click_to_upload_photo">上傳照片</string>

    <string name="liked_article_is_empty">您收藏的文章會顯示在這裡。</string>
    <string name="history_article_is_empty">您發布過的文章會顯示在這裡。</string>

    <string name="login_privacy_policy_html">
        <![CDATA[
        <font color="#ffffff">在您登入時，即同意我們的<a href="https://rogertsai917.wixsite.com/makecoffee">隱私權政策</a><br></font>
        ]]>
    </string>

</resources>
